[package]
name = "dozer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
hex = "0.4.3"
process-memory = "0.5.0"
sysinfo = "0.30.5"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["libloaderapi", "synchapi", "winbase", "ntdef", "errhandlingapi", "handleapi"] }
